--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <HTML>
 
-<head>
+<BODY>
 
-<TITLE><u>Gabrielle Moss: Geographical Information System MSc Portfolio</u></TITLE>
+<h1 style="width:100%; font-size:20px; font-face:Verdana"><u>Gabrielle Moss: Geographical Information System MSc Portfolio</u></h1>
 
-</head>
 
-<BODY style="width:70%">
+<font face = "Verdana">
+<font size = 2>
+<BODY style="width:60%">
 <u>About me!</u>
 
 <p>
@@ -24,14 +25,14 @@ I’m currently furthering my expertise in the field of Geographical Information
 
 <p>My University time also allowed me to pursue new hobbies such as joining the Kingston University Woman’s Rugby Club (KUWR), where I spent two years. The wonderful team I joined helped expand my social circle with the wonderful team, and allowed myself to relieve the stress of university work onto the pitch. In my first year at Kingston I also dabbled into the film society and triathlon team, but this was a shorter lived passion.</p>
 
-<p> Course breakdown for GIS MSc: </p>
+<p><u> Course breakdown for GIS MSc: </u></p>
 
 
-<TABLE style="width:50%">
+<TABLE style="width:50%; font-size:12px;">
 
 	<TR>
-		<TH style="font-size:16px;"><u>Course Name</u></TH> 
-		<TH style="font-size:16px;"><u>Course Description<u></TH>
+		<TH><u>Course Name</u></TH> 
+		<TH><u>Course Description<u></TH>
 	</TR>
 	<TR>
 	</TR>
@@ -72,5 +73,7 @@ I’m currently furthering my expertise in the field of Geographical Information
 	</TR>
 
 </BODY>
+</font>
+</font>
 
 </HTML>
