--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ I’m currently furthering my expertise in the field of Geographical Information
 	</TR>
 
 	<TR>
-		<TH style="color:blue;"><i>Programming for Geographical Information Analysis: Core Skills</i></TH>  
+		<TH><i>Programming for Geographical Information Analysis: Core Skills</i></TH>  
 		<TH style="color:blue;">This module was designed to teach the basics of computer programming, focusing on the Python programming language.</TH>
 	</TR>
 
