--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <h1 style="width:100%; font-size:20px; font-face:Verdana"><u>Gabrielle Moss: Geographical Information System MSc Portfolio</u></h1>
 
 
+<center>
 <font face = "Verdana">
 <font size = 2>
-<BODY style="width:60%">
+<BODY style="width:60%;">
 <u>About me!</u>
 
 <p>
@@ -24,6 +25,7 @@ I’m currently furthering my expertise in the field of Geographical Information
 <p>My University time also allowed me to pursue new hobbies such as joining the Kingston University Woman’s Rugby Club (KUWR), where I spent two years. The wonderful team I joined helped expand my social circle with the wonderful team, and allowed myself to relieve the stress of university work onto the pitch. In my first year at Kingston I also dabbled into the film society and triathlon team, but this was a shorter lived passion.</p>
 <img src="Swimmathon.jpg" alt="Swimmathon" width="500" height="377">
 
+</center>
 
 
 <p><u> Course breakdown for GIS MSc: </u></p>
