--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 
 <BODY>
 
-<h1 style="width:100%; font-size:20px; font-face:Verdana"><u>Gabrielle Moss: Geographical Information System MSc Portfolio</u></h1>
-
-
 <center>
+
+<h1><u>Gabrielle Moss: MSc Portfolio</u></h1>
+
+
+
+
+<BODY style="width:60%;">
+
 <font face = "Verdana">
 <font size = 2>
-<BODY style="width:60%;">
-<u>About me!</u>
+
+<h2><u>About me!</u></h2>
 
 <p>
 I am a recently graduate from Kingston University (2014-17), where I studied Physical Geography and graduated with a 2:1. 
@@ -27,53 +32,6 @@ I’m currently furthering my expertise in the field of Geographical Information
 
 </center>
 
-
-<p><u> Course breakdown for GIS MSc: </u></p>
-
-
-<TABLE style="width:50%; font-size:12px;">
-
-	<TR>
-		<TH><u>Course Name</u></TH> 
-		<TH><u>Course Description<u></TH>
-	</TR>
-	<TR>
-	</TR>
-
-	<TR>
-		<TH style="color:blue;"><i>Programming for Geographical Information Analysis: Core Skills</i></TH>  
-		<TH style="color:blue;">This module was designed to teach the basics of computer programming, focusing on the Python programming language.</TH>
-	</TR>
-
-	<TR>
-		<TH><i>Data Visualisation and Analysis</i></TH> 
-		<TH>This module developed core spatial analysis, statistical skills and visualisation methods required to present an analysis of geographically referenced data. Largely conducted with the use of ESRI’s ArcGIS and SPSS.</TH>
-	</TR>
-
-	<TR>
-		<TH style="color:blue;"><i>Professional and Personal Development</i></TH>
-		<TH style="color:blue;">This core module developed student professional skills by widening the breadth of software to: MapInfo; QGIS; R and Tableau. There is also the opportunity to conduct either a work-based project, within industry or academic project, or to complete advanced skill training.</TH>
-	</TR>
-
-	<TR>
-		<TH><i>Applied Population and Demographic Analysis</i></TH> 
-		<TH>This reviewed and experiments with the main data sources to perform analysis of populations and societies.</TH>
-	</TR>
-
-	<TR>
-		<TH style="color:blue;"><i>Digital Image Processing for Environmental Remote Sensing</i></TH> 
-		<TH style="color:blue;">This module introduced concepts/theories/methods for Earth observations from aircrafts and orbital satellites for environmental research as part of GIS. This includes training in the art form of; restoring, classifying and extraction of data about the land surface from a diverse range of remote sensing images.</TH>
-	</TR>
-
-	<TR>
-		<TH><i>GIS and Environment</i></TH> 
-		<TH>This module reviewed how GIS may be used to study environmental science including the modelling of terrain, hydrology, ecology and land use.</TH>
-	</TR>
-
-	<TR>
-		<TH style="color:blue;"><i>Disseratation</i></TH> 
-		<TH style="color:blue;">Original research or development project conducted under the supervision of a staff member(s) appointed as supervisor.</TH>
-	</TR>
 
 </BODY>
 </font>
