--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ tr:nth-child(even) {
 
 <!-- Menu -->
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left"style="z-index:3;width:300px;" id="mySidebar"><br>
-    <p> Gabrielle Moss Portfolio</p>
+	<p><u> Gabrielle Moss Portfolio</u></p>
 	<img src="Graduation.JPG" style="width:80%;" class="w3-round"><br><br>
   </div>
     <a href="#About me" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>About me</a> <br>
@@ -195,9 +195,6 @@ bla bla bla
 <p>Assessment 1</p>
 
   
-  <div class="w3-black w3-center w3-padding-24">Template by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
-</div>
-
 <script>
 // Script to open and close sidebar
 function w3_open() {
