--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@ My chosen subject was to assess the coastal erosion of Walney Island, Cumbria ov
 Ordinance Survey dating from 1849 to 1989 and two LANDSAT images collected from Google Earth. This statistical analysis of the project was conducted 
 by using the USGS DSAS toolbar, an extension using ArcGIS.
 </p>
-<img src="Walney.JPG" alt="Walney Island" width="500" height="377"><img src="CoastChange.JPG" alt="Evident Coastal Change" width="500" height="377">
-<a href="Dissertation.pdf">Assessment of Changes in the Historical Shoreline of the South Walney Island, Cumbria</a>
+<img src="Walney.JPG" alt="Walney Island" width="500" height="377"><img src="CoastChange.JPG" alt="Evident Coastal Change" width="500" height="377"><br>
+<a href="Dissertsion.pdf">Assessment of Changes in the Historical Shoreline of the South Walney Island, Cumbria</a>
 <p><u>Python Project</u><br>
 bla bla bla
 </p>
-<p>Assessment 1</p>
+
 
   
 <script>
