--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@ Ordinance Survey dating from 1849 to 1989 and two LANDSAT images collected from 
 by using the USGS DSAS toolbar, an extension using ArcGIS.
 </p>
 <img src="Walney.JPG" alt="Walney Island" width="500" height="377"><img src="CoastChange.JPG" alt="Evident Coastal Change" width="500" height="377"><br>
-<a href="Dissertsion.pdf">Assessment of Changes in the Historical Shoreline of the South Walney Island, Cumbria</a>
+<p>
+<a href="https://gabrielle-moss.github.io/gy17gjm/Dissertsion.pdf">Assessment of Changes in the Historical Shoreline of the South Walney Island, Cumbria</a>
+</p>
 <p><u>Python Project</u><br>
 bla bla bla
 </p>
