--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 </style>
-<body style="background-color:#cceeff" style="max-width:1600px">
+<body style="background-color:#cceeff" style="max-width:70%">
 
 <!-- Menu -->
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left"style="z-index:3;width:300px;" id="mySidebar"><br>
-	<p><u> Gabrielle Moss Portfolio</u></p>
+	<p><center><u> Gabrielle Moss Portfolio</u></center></p>
 	<img src="Graduation.JPG" style="width:80%;" class="w3-round"><br><br>
   </div>
     <a href="#About me" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>About me</a> <br>
@@ -37,19 +37,15 @@ tr:nth-child(even) {
   </div>
 </nav>
 
-<!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:300px">
+<div class="w3-main" style="margin-left:300px; margin-right:350px">
 
   <!-- Header -->
   <header id="About me">
-    <a href="#"><img src="/w3images/avatar_g2.jpg" style="width:65px; w3-text-teal" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
-    <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
     <h1><b>About me</b></h1>
-        <p> I am a recently graduate from Kingston University (2014-17), where I studied Physical Geography and graduated with a 2:1. I’m currently 	furthering my expertise in the field of Geographical Information Systems, studying for an MSc in GIS at The University of Leeds. </p>
+        <p> I am a recently graduate from Kingston University (2014-17), where I studied Physical Geography and graduated with a 2:1. I’m currently furthering my expertise in the field of Geographical Information Systems, studying for an MSc in GIS at The University of Leeds. </p>
 
 <p>My interest for geography truly began within the Lake District in Cumbria, where I spent much of my childhood. The love of the outdoors and nature was born by hiking, kayaking and swimming in the national park here, a time in my life I would never alter. </p>
 <img src="Windermere (1).jpg" alt="Windermere" width="500" height="377"> <img src="LakeDistrictSwim.jpg" alt="Black Moss Pot" width="500" height="377">
@@ -195,20 +191,6 @@ by using the USGS DSAS toolbar, an extension using ArcGIS.
 bla bla bla
 </p>
 
-
-  
-<script>
-// Script to open and close sidebar
-function w3_open() {
-    document.getElementById("mySidebar").style.display = "block";
-    document.getElementById("myOverlay").style.display = "block";
-}
- 
-function w3_close() {
-    document.getElementById("mySidebar").style.display = "none";
-    document.getElementById("myOverlay").style.display = "none";
-}
-</script>
-
+	  
 </body>
 </html>
