--- a/index.html
+++ b/index.html
@@ -186,9 +186,15 @@ by using the USGS DSAS toolbar, an extension using ArcGIS.
 <p>
 <a href="https://gabrielle-moss.github.io/gy17gjm/Dissertsion.pdf">Assessment of Changes in the Historical Shoreline of the South Walney Island, Cumbria</a>
 </p>
-<p><u>Python Project</u><br>
-bla bla bla
+	  
+<p><u>Agent-based Model Project</u><br>
+As part as my 'Programming for Geographical Information Analysis' module within my MSc at Leeds, I set the task of producing my own agent-based model using data provided through the course. 
+The aim of the final peice was to build agents using the provided data, which interacted with a restricted environment 'eating' data it encountered, storing this data and sharing it with its neighboroughs. All contained within a GUI.
 </p>
+	  
+<img src="ABM.jpg" alt="Agent-based Model" width="400" height="277">
+	  
+<a href="https://github.com/Gabrielle-Moss/gy17gjm">Agent-Based Model data</a>
 
 	  
 </body>
