--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 </style>
-<body style="background-color:#cceeff" style="max-width:70%">
+<body style="background-color:#cceeff"
 
 <!-- Menu -->
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left"style="z-index:3;width:250px;" id="mySidebar"><br>
