--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ Capital House Chinese Takeaway - Customer Service (2009 to 14)<br>
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
 
     <hr>
-<p><u>Undergraduate Disseratation</u><br>
+<p><u><a href="https://gabrielle-moss.github.io/gy17gjm/Dissertsion.pdf">Undergrad Dissertation: Assessment of Changes in the Historical Shoreline of the South Walney Island, Cumbria</a></u><br>
 The final piece of my undergraduate puzzle was to produce a 10,000 word dissertation, worth 25% of my degree, given the final grade of a 2:1. 
 My chosen subject was to assess the coastal erosion of Walney Island, Cumbria over several hundred years. This was done by comparing six different 
 Ordinance Survey dating from 1849 to 1989 and two LANDSAT images collected from Google Earth. This statistical analysis of the project was conducted 
@@ -184,10 +184,10 @@ by using the USGS DSAS toolbar, an extension using ArcGIS.
 </p>
 <img src="Walney.JPG" alt="Walney Island" width="400" height="277"><img src="CoastChange.JPG" alt="Evident Coastal Change" width="400" height="277"><br>
 <p>
-<a href="https://gabrielle-moss.github.io/gy17gjm/Dissertsion.pdf">Assessment of Changes in the Historical Shoreline of the South Walney Island, Cumbria</a>
+
 </p>
 	  
-<p><u>Agent-based Model Project</u><br>
+<p><u><a href="https://github.com/Gabrielle-Moss/gy17gjm">Agent-Based Model Project</a></u><br>
 As part as my 'Programming for Geographical Information Analysis' module within my MSc at Leeds, I set the task of producing my own agent-based model using data provided through the course. 
 The aim of the final peice was to build agents using the provided data, which interacted with a restricted environment 'eating' data it encountered, storing this data and sharing it with its neighboroughs. All contained within a GUI.
 </p>
