--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ tr:nth-child(even) {
 </nav>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:300px; margin-right:350px">
+<div class="w3-main" style="margin-left:300px; margin-right:50px">
 
   <!-- Header -->
   <header id="About me">
@@ -172,11 +172,12 @@ Capital House Chinese Takeaway - Customer Service (2009 to 14)<br>
     <a href="#"><img src="/w3images/avatar_g2.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
+	    
     <h3><b>Produced work</b></h3>
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
 
     <hr>
-<p><u><a href="https://gabrielle-moss.github.io/gy17gjm/Dissertsion.pdf">Undergrad Dissertation: Assessment of Changes in the Historical Shoreline of the South Walney Island, Cumbria</a></u><br>
+<p><u><a href="https://gabrielle-moss.github.io/portfolio/Dissertsion.pdf">Undergrad Dissertation: Assessment of Changes in the Historical Shoreline of the South Walney Island, Cumbria</a></u><br>
 The final piece of my undergraduate puzzle was to produce a 10,000 word dissertation, worth 25% of my degree, given the final grade of a 2:1. 
 My chosen subject was to assess the coastal erosion of Walney Island, Cumbria over several hundred years. This was done by comparing six different 
 Ordinance Survey dating from 1849 to 1989 and two LANDSAT images collected from Google Earth. This statistical analysis of the project was conducted 
