--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ by using the USGS DSAS toolbar, an extension using ArcGIS.
 
 </p>
 	  
-<p><u><a href="https://github.com/Gabrielle-Moss/gy17gjm">Agent-Based Model Project</a></u><br>
+<p><u><a href="Dissertation.pdf">Agent-Based Model Project</a></u><br>
 As part as my 'Programming for Geographical Information Analysis' module within my MSc at Leeds, I set the task of producing my own agent-based model using data provided through the course. 
 The aim of the final peice was to build agents using the provided data, which interacted with a restricted environment 'eating' data it encountered, storing this data and sharing it with its neighboroughs. All contained within a GUI.
 </p>
