--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ tr:nth-child(even) {
 <img src="Windermere (1).jpg" alt="Windermere" width="400" height="277"> <img src="LakeDistrictSwim.jpg" alt="Black Moss Pot" width="400" height="277">
 
 <p>Through my adolescence and time at university, I have gained and continued a passion for multiple sporting activities. My focus through most of life was my swimming, a focus that resulted in me gaining a NPLQ Lifeguarding and a Health and Safety in the Workplace certificates in 2013, resulting in myself working as a lifeguard throughout my undergrad. The love of swimming also led me into swimming multiple Swimmathon’s with my sister and mother in 2014 and 2015 in Brockwell lido, both resulting in gaining £200 for Cancer Research.</p>
-<p>My University time also allowed me to pursue new hobbies such as joining the Kingston University Woman’s Rugby Club (KUWR), where I spent two years. The wonderful team I joined helped expand my social circle with the wonderful team, and allowed myself to relieve the stress of university work onto the pitch. In my first year at Kingston I also dabbled into the film society and triathlon team, but this was a shorter lived passion.</p>
+<p>My University time also allowed me to pursue new hobbies such as joining the Kingston University Woman’s Rugby Club (KUWR), where I spent two years. The wonderful team I joined helped expand my social circle, and allowed me to relieve the stress of university work onto the pitch. In my first year at Kingston I also dabbled with the film society and triathlon team, but these were shorter lived passions.</p>
 <img src="Swimmathon.jpg" alt="Swimmathon" width="400" height="277"> <img src="KWRC.jpg" alt="Kingston Rugby Club" width="277=" height="277">
 	    
     </div>
